# sfdc_metadata_builder

./: pyproject.toml
.github/workflows/: black.yml
sfdc_metadata_builder/models/: action_overrides.py  base.py
sfdc_metadata_builder/templates/: actionOverride.xml.jinja2
tests/: test_action_override.py
