[tool.poetry]
name = "sfdc_metadata_builder"
version = "0.0.1"
description = "A tool for building salesforce metadata from json"
authors = ["Rehket"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.2"
Jinja2 = "^3.1.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
